--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swagger-ts-toolkit",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "功能强大的 Swagger/OpenAPI TypeScript 工具包 - 自动生成类型定义、API接口和端点常量",
   "type": "module",
   "main": "./dist/index.js",
@@ -10,8 +10,10 @@
     "stt": "./dist/cli.js"
   },
   "scripts": {
-    "build": "tsc",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && tsc",
     "dev": "tsc --watch",
+    "prebuild": "npm run clean",
     "prepublishOnly": "npm run build",
     "test": "node --test",
     "lint": "eslint src/**/*.ts",
