--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -58,13 +61,63 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
 
+      - name: Configure Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Install dependencies
         run: npm ci
 
       - name: Build project
         run: npm run build
 
-      - name: Publish to npm (dry-run)
-        run: npm publish --dry-run
+      - name: Check if version changed
+        id: version_check
+        run: |
+          CURRENT_VERSION=$(node -p "require('./package.json').version")
+          echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+          
+          # 检查当前版本是否已经发布
+          if npm view swagger-ts-toolkit@$CURRENT_VERSION version 2>/dev/null; then
+            echo "version_exists=true" >> $GITHUB_OUTPUT
+            echo "⚠️  版本 $CURRENT_VERSION 已存在于 npm"
+          else
+            echo "version_exists=false" >> $GITHUB_OUTPUT
+            echo "✅ 版本 $CURRENT_VERSION 未发布，准备发布"
+          fi
+
+      - name: Publish to npm
+        if: steps.version_check.outputs.version_exists == 'false'
+        run: |
+          echo "📦 发布版本: ${{ steps.version_check.outputs.current_version }}"
+          npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Create Git Tag
+        if: steps.version_check.outputs.version_exists == 'false'
+        run: |
+          VERSION=${{ steps.version_check.outputs.current_version }}
+          git tag -a "v$VERSION" -m "Release v$VERSION"
+          git push origin "v$VERSION"
+
+      - name: Create GitHub Release
+        if: steps.version_check.outputs.version_exists == 'false'
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ steps.version_check.outputs.current_version }}
+          release_name: Release v${{ steps.version_check.outputs.current_version }}
+          body: |
+            🚀 自动发布版本 v${{ steps.version_check.outputs.current_version }}
+            
+            查看完整更新日志: [CHANGELOG.md](https://github.com/${{ github.repository }}/blob/main/CHANGELOG.md)
+          draft: false
+          prerelease: false
+
+      - name: Skip publish
+        if: steps.version_check.outputs.version_exists == 'true'
+        run: |
+          echo "⏭️  跳过发布: 版本 ${{ steps.version_check.outputs.current_version }} 已存在"
