--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "prepublishOnly": "npm run build",
     "test": "node --test",
     "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts"
+    "format": "prettier --write src/**/*.ts",
+    "version:patch": "npm version patch --no-git-tag-version",
+    "version:minor": "npm version minor --no-git-tag-version",
+    "version:major": "npm version major --no-git-tag-version",
+    "release": "./scripts/bump-version.sh"
   },
   "keywords": [
     "swagger",
